--- a/devanathan.html
+++ b/devanathan.html
@@ -1,1 +1,55 @@
-
+<nav class="navbar navbar-expand-lg fixed-top navbarScroll">
+    <div class="container">
+        <a class="navbar-brand" href="#">MY PERSONAL PORTFOLIO</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#education">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#services">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+            
+        </div>
+    </div>
+</nav>
+<section class="bgimage" id="home">
+    <div class="container-fluid">
+        <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+            <h2 class="hero_title">Hi, I AM DEVANATHAN</h2>
+            <p class="hero_desc">i am a bca student</p>
+        </div>
+        </div>
+    </div>
+</section>
+<section id="MY PROFILE">
+    <div class="container mt-3">
+        <h1 class="text-center">MY PROFILE</h1>
+        <div class="row">
+            <div class="col-lg-4 mt-4">
+                <div class="card">
+                    <img class="card-img-top" src="IMG-20211118-WA0000.jpg" alt="Card image" style="width:30%">
+                    <div class="card-body">
+                        <h4 class="card-title">ABOUT ME</h4>
+                        <p class="card-text">hellow! my name is devanathan.my profession is editing.my hobbe is playing criket,watching movie and reading books.</p>
+                        <div class="text-center">
+                            <a href="#" class="btn btn-success">MY RESUME</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
